removed space from img name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <button class="share-btn" id="shareBtn"><img src="./images/icon-share.svg" alt="dark gray arrow on light gray button"></button>
         
-        <button class="share-btn-dark hidden" id="shareBtnDark"><img src="./images/Group 3.png" alt="dark gray arrow on light gray button"></button>
+        <button class="share-btn-dark hidden" id="shareBtnDark"><img src="./images/icon-share-dark.png" alt="dark gray arrow on light gray button"></button>
       </div>
     </div>
 
